# TDS

./: CMakeLists.txt  README.md
.github/workflows/: validation.yml
ANA/: AnaTDS.cxx  AnaTDS.h  CMakeLists.txt  Hit.cxx  Hit.h  HitLinkDef.h  TDSRoot.cxx  analyzeTDS.cxx
TDS/: ANAStructs.h  CMakeLists.txt  TDS.cxx  TDS.h  TDSDaq.cxx
cmake/: FindROOT.cmake  FindVISA.cmake  thisTDS.cmake
config/: TDS.cfg  anais.cfg
macros/: savespc.C  utilTDS.C
scripts/: processdata.sh
test/: Test00001.raw.01.spc
